fix: solve dark mode variables

--- a/src/palette.scss
+++ b/src/palette.scss
@@ -2,28 +2,31 @@
 :root {
   color-scheme: light dark;
 
-  background-color: #f5f5f5;
+  background-color: var(--background-color);
 
   --primary: #3f51b5;
   --primary-contrast: #fff;
   --accent: #0a9a8d;
   --accent-contrast: #fff;
 
-  --medium: #d9d9d9;
   --text-color: #000;
-}
+  --medium: #d9d9d9;
+  --background-color: #f5f5f5;
 
-@media (prefers-color-scheme: dark) {
-  body {
-    background-color: #303140;
-    color: #fff;
-
+  @media (prefers-color-scheme: dark) {
     --primary: #0a9a8d;
     --primary-contrast: #fff;
     --accent: #3f51b5;
     --accent-contrast: #fff;
 
-    --medium: #92949c;
     --text-color: #fff;
+    --medium: #92949c;
+    --background-color: #303140;
+
+    html,
+    body {
+      background-color: var(--background-color);
+      color: var(--text-color);
+    }
   }
 }
